feat: add action for get list of participant in specific quiz
